styles/style.css
:root {
  --primary: rgb(29, 42, 59);
  --secondary: rgb(245, 245, 220);
  scroll-behavior: smooth;
  scroll-padding-top: 100px;
}

* {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body {
  background-color: var(--primary);
  color: white;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 3rem;
}

h3 {
  font-size: 2rem;
}

p {
  font-size: 1.2rem;
}

a {
  text-decoration: none;
}

ul {
  list-style-type: none;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  background-color: transparent;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: right;
  z-index: 2;
}

nav {
  background-color: transparent;
  padding: 1rem;
}

button {
  border: none;
  display: inline-block;
  background-size: cover;
  background-position: center;
  cursor: pointer;
  background-color: transparent;
}

.main-menu li {
  transition: transform 0.1s;
}

.main-menu li:hover {
  transform: translateY(-2px);
}

.main-menu a {
  color: black;
}

.main-menu {
  display: block;
  background-color: var(--secondary);
  width: 100%;
  font-weight: 600;
  box-shadow: 5px 5px 15px 3px #000000;
}

.main-menu ul {
  display: flex;
  justify-content: flex-end;
  gap: 3rem;
}

@media (max-width: 400px) {
  .main-menu ul {
    gap: 1.5rem;
  }
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5rem;
}

.home,
.about,
.projects,
.contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 600px;
}

.home {
  padding: 10rem 0;
  text-align: center;
}

.home h1 {
  margin: 0;
}

.home button {
  color: white;
  border: 3px solid white;
  padding: 1rem;
  font-size: 1rem;
  border-radius: 10px;
  font-weight: 500;
}

.home button:hover {
  animation-duration: 0.5s;
  animation-name: bounce;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

.home img {
  width: 200px;
  border-radius: 50%;
  border: 5px solid white;
  margin: 1rem;
}

@keyframes bounce {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(-5px);
  }
}

.about {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

#about h3 {
  margin-bottom: 0;
}

.skills {
  display: flex;
  flex-wrap: wrap;
  gap: 3rem;
  justify-content: center;
  align-items: center;
  padding: 3rem 0;
}

.skill {
  display: flex;
  flex-direction: column;
}

.skill i {
  font-size: 50px;
  transition: transform 0.1s;
}

.skill i:hover {
  transform: scale(1.1) translateY(-5px);
}

.skill span {
  font-size: 12px;
}

.projects-container {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.projects {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project {
  max-width: 600px;
  border: 1px 0 solid white;
}

.project img {
  transition: transform 0.3s;
  width: 100%;
  height: 100%;
  background-size: cover;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 10px;
}

.image-container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%;
  border-radius: 10px;
}

.project img:hover {
  transform: scale(1.05);
}

.project p {
  text-align: center;
}

.project-buttons {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.project button,
form button,
.back-to-home button {
  background-color: var(--secondary);
  color: black;
  font-size: 16px;
  padding: 0.5rem;
  border-radius: 8px;
}

.project button {
  transition: transform 0.1s ease-out;
}

.project button:hover {
  transform: translateY(-3px);
}

form {
  display: flex;
  flex-wrap: wrap;
  max-width: 600px;
  justify-content: center;
  gap: 1rem;
}

form textarea {
  height: 8rem;
  resize: none;
}

form input,
form textarea {
  background-color: white;
  color: black;
  outline: none;
  border: none;
  border-radius: 8px;
  padding: 0.5rem;
  width: 100%;
  box-sizing: border-box;
}

.contact-info {
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 1rem;
}

footer {
  padding: 1rem;
}

footer nav {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3rem;
}

footer i {
  font-size: 32px;
  color: white;
}

footer a,
footer img {
  transition: transform 0.3s;
}

footer a:hover,
footer img:hover {
  transform: rotate(360deg);
}

@media (min-width: 1200px) {
  .about,
  .projects,
  .contact {
    max-width: 1000px;
  }

  .about {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto 1fr;
  }

  .about h2 {
    grid-row: 1 / 2;
    grid-column: 1 / 3;
  }

  .about p {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
  }

  .skills {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    padding: 0;
  }

  .project {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto 1fr;
    max-width: 1000px;
    gap: 1rem;
  }

  .project h3 {
    text-align: center;
    grid-row: 1 / 2;
    grid-column: 2 / 3;
  }

  .project p {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
  }

  .project-buttons {
    grid-row: 3 / 4;
    grid-column: 2 / 3;
  }

  .image-container {
    grid-row: 1 / 4;
    grid-column: 1 / 2;
  }

  .project:nth-child(even) .image-container {
    grid-row: 1 / 4;
    grid-column: 2 / 3;
  }

  .project:nth-child(even) h3 {
    text-align: center;
    grid-row: 1 / 2;
    grid-column: 1 / 2;
  }

  .project:nth-child(even) p {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
  }

  .project:nth-child(even) .project-buttons {
    grid-row: 3 / 4;
    grid-column: 1 / 2;
  }
}

